--- a/index.html
+++ b/index.html
@@ -17,56 +17,232 @@
           <button id="btn-choice-def">Defesa</button>
         </div>
 
-        <div id="container-choice-ataque">
-          VALK DE ATAQUE
 
-          <div>
+        <div id="container-choice-ataque1" class="hidden">
+          
+        <button id="valk1" class="hidden">Valk de Ataque 1</button>
+         <div>
             <label for="labelPenasAtq1">Selecione uma:</label>
             <select id="labelPenasAtq1"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq2">Selecione uma:</label>
+            <select id="labelPenasAtq2" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq3">Selecione uma:</label>
+            <select id="labelPenasAtq3" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq4">Selecione uma:</label>
+            <select id="labelPenasAtq4" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq5">Selecione uma:</label>
+            <select id="labelPenasAtq5" onchange="verificarRepeticao('labelPenas5')"></select>
+         </div>
+
+        <button id="valk2"class="hidden">Valk de Ataque 2</button>
+         <div>
+            <label for="labelPenasAtq6">Selecione uma:</label>
+            <select id="labelPenasAtq6"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq7">Selecione uma:</label>
+            <select id="labelPenasAtq7" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq8">Selecione uma:</label>
+            <select id="labelPenasAtq8" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq9">Selecione uma:</label>
+            <select id="labelPenasAtq9" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq10">Selecione uma:</label>
+            <select id="labelPenasAtq10" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas2">Selecione uma:</label>
-            <select id="labelPenas2" onchange="verificarRepeticao('labelPenas2')"></select>
+
+        <button id="valk3"class="hidden">Valk de Ataque 3</button>
+         <div>
+            <label for="labelPenasAtq11">Selecione uma:</label>
+            <select id="labelPenasAtq11"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq12">Selecione uma:</label>
+            <select id="labelPenasAtq12" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq13">Selecione uma:</label>
+            <select id="labelPenasAtq13" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq14">Selecione uma:</label>
+            <select id="labelPenasAtq14" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq15">Selecione uma:</label>
+            <select id="labelPenasAtq15" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas3">Selecione uma:</label>
-            <select id="labelPenas3" onchange="verificarRepeticao('labelPenas3')"></select>
+
+        <button id="valk4"class="hidden">Valk de Ataque 4</button>
+         <div>
+            <label for="labelPenasAtq16">Selecione uma:</label>
+            <select id="labelPenasAtq16"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq17">Selecione uma:</label>
+            <select id="labelPenasAtq17" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq18">Selecione uma:</label>
+            <select id="labelPenasAtq18" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq19">Selecione uma:</label>
+            <select id="labelPenasAtq19" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq20">Selecione uma:</label>
+            <select id="labelPenasAtq20" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas4">Selecione uma:</label>
-            <select id="labelPenas4" onchange="verificarRepeticao('labelPenas4')"></select>
-          </div>
-          <div>
-            <label for="labelPenas5">Selecione uma:</label>
-            <select id="labelPenas5" onchange="verificarRepeticao('labelPenas5')"></select>
+
+        <button id="valk5"class="hidden">Valk de Ataque 5</button>
+         <div>
+            <label for="labelPenasAtq21">Selecione uma:</label>
+            <select id="labelPenasAtq21"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq22">Selecione uma:</label>
+            <select id="labelPenasAtq22" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq23">Selecione uma:</label>
+            <select id="labelPenasAtq23" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq24">Selecione uma:</label>
+            <select id="labelPenasAtq24" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq25">Selecione uma:</label>
+            <select id="labelPenasAtq25" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
         </div>
-        <div id="container-choice-defesa">
-          VALK DE DEFESA
 
 
-          <div>
-            <label for="labelPenas1">Selecione uma:</label>
-            <select id="labelPenas1" onchange="verificarRepeticao('labelPenas1')"></select>
+        <div id="container-choice-defesa" class="hidden">
+         <button id="valk6" class="hidden">Valk de Defesa 1</button>
+         <div>
+            <label for="labelPenasAtq1">Selecione uma:</label>
+            <select id="labelPenasAtq1"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq2">Selecione uma:</label>
+            <select id="labelPenasAtq2" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq3">Selecione uma:</label>
+            <select id="labelPenasAtq3" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq4">Selecione uma:</label>
+            <select id="labelPenasAtq4" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq5">Selecione uma:</label>
+            <select id="labelPenasAtq5" onchange="verificarRepeticao('labelPenas5')"></select>
+         </div>
+
+        <button id="valk7"class="hidden">Valk de Defesa 2</button>
+         <div>
+            <label for="labelPenasAtq6">Selecione uma:</label>
+            <select id="labelPenasAtq6"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq7">Selecione uma:</label>
+            <select id="labelPenasAtq7" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq8">Selecione uma:</label>
+            <select id="labelPenasAtq8" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq9">Selecione uma:</label>
+            <select id="labelPenasAtq9" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq10">Selecione uma:</label>
+            <select id="labelPenasAtq10" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas2">Selecione uma:</label>
-            <select id="labelPenas2" onchange="verificarRepeticao('labelPenas2')"></select>
+
+        <button id="valk8"class="hidden">Valk de Defesa 3</button>
+         <div>
+            <label for="labelPenasAtq11">Selecione uma:</label>
+            <select id="labelPenasAtq11"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq12">Selecione uma:</label>
+            <select id="labelPenasAtq12" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq13">Selecione uma:</label>
+            <select id="labelPenasAtq13" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq14">Selecione uma:</label>
+            <select id="labelPenasAtq14" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq15">Selecione uma:</label>
+            <select id="labelPenasAtq15" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas3">Selecione uma:</label>
-            <select id="labelPenas3" onchange="verificarRepeticao('labelPenas3')"></select>
+
+        <button id="valk9"class="hidden">Valk de Defesa 4</button>
+         <div>
+            <label for="labelPenasAtq16">Selecione uma:</label>
+            <select id="labelPenasAtq16"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq17">Selecione uma:</label>
+            <select id="labelPenasAtq17" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq18">Selecione uma:</label>
+            <select id="labelPenasAtq18" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq19">Selecione uma:</label>
+            <select id="labelPenasAtq19" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq20">Selecione uma:</label>
+            <select id="labelPenasAtq20" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
-          <div>
-            <label for="labelPenas4">Selecione uma:</label>
-            <select id="labelPenas4" onchange="verificarRepeticao('labelPenas4')"></select>
-          </div>
-          <div>
-            <label for="labelPenas5">Selecione uma:</label>
-            <select id="labelPenas5" onchange="verificarRepeticao('labelPenas5')"></select>
+
+        <button id="valk10"class="hidden">Valk de Defesa 5</button>
+         <div>
+            <label for="labelPenasAtq21">Selecione uma:</label>
+            <select id="labelPenasAtq21"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq22">Selecione uma:</label>
+            <select id="labelPenasAtq22" onchange="verificarRepeticao('labelPenas2')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq23">Selecione uma:</label>
+            <select id="labelPenasAtq23" onchange="verificarRepeticao('labelPenas3')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq24">Selecione uma:</label>
+            <select id="labelPenasAtq24" onchange="verificarRepeticao('labelPenas4')"></select>
+         </div>
+         <div>
+            <label for="labelPenasAtq25">Selecione uma:</label>
+            <select id="labelPenasAtq25" onchange="verificarRepeticao('labelPenas5')"></select>
           </div>
         </div>
-      </div>
     </section>
   </div>
 <script src="assets/js/main.js"></script>
